Found out I didn't track my images especially the sepian one
Solved it though

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         property="twitter:description" 
         content="Hey there! I'm Ehi Ejakhian — a curious Front-end Developer and Arduino tinkerer. This is my corner of the web where I share what I build, what I learn, and what lights me up. Feel free to explore and say hi!"
     />
-    <meta property="twitter:image" content="https://ehiejakhian.github.io/images/myPictures/sepia_me.png"" />
+    <meta property="twitter:image" content="https://ehiejakhian.github.io/images/myPictures/sepia_me.png" />
 
     
     
