--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta http-equiv="Content-Language" content="en">
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Ehi Ejakhian">
+    <meta name="google-site-verification" content="7nyOqcEMYM_dn5w-EDCfQrbnvJ6xTrcr08rAJvbU2CA" />
 
 
     <meta property="og:type" content="website">
