Added the loader
Hope it works

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     </script>
 </head>
 <body>
+    <div class="loader">
+        <div class="spinner"><span><img src="./images/myPictures/favicon.jpg"></span></div>
+    </div>
     <header>
         <div class="wrapper">
             <div class="name">
