added the languages logos and the new languages I've learned

--- a/index.html
+++ b/index.html
@@ -145,8 +145,19 @@
             </div>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="skills">
             <h1>My Dev Skills</h1>
+            <div class="skills__logos">
+                <b class="open__angle__bracket">&lt;</b>
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
+                <i class="fa-brands fa-sass"></i>
+                <i class="fa-brands fa-php"></i>
+                <i class="fa-brands fa-react"></i>
+                <i class="fa-brands fa-python"></i>
+                <b class="close__angle__bracket">/&gt;</b>
+            </div>
             <div class="prog-lang">
                 <div class="lang HTML">
                     <h2><span>HTML</span></h2>
@@ -158,11 +169,27 @@
                 </div>
                 <div class="lang JS">
                     <h2><span>JS</span></h2>
-                    <div class="skill-percent">32%</div>
+                    <div class="skill-percent">60%</div>
                 </div>
                 <div class="lang SCSS">
                     <h2><span>SCSS</span></h2>
                     <div class="skill-percent">70%</div>
+                </div>
+                <div class="lang JQuery">
+                    <h2><span>JQuery</span></h2>
+                    <div class="skill-percent">40%</div>
+                </div>
+                <div class="lang PHP">
+                    <h2><span>PHP</span></h2>
+                    <div class="skill-percent">20%</div>
+                </div>
+                <div class="lang React">
+                    <h2><span>React</span></h2>
+                    <div class="skill-percent">40%</div>
+                </div>
+                <div class="lang Python">
+                    <h2><span>Python</span></h2>
+                    <div class="skill-percent">30%</div>
                 </div>
             </div>
         </section>
