--- a/index.html
+++ b/index.html
@@ -198,31 +198,32 @@
             <h1>Projects</h1>
             <div id="whole-projects">
                 <div class="each-whole">
-                    <a href="https://ehiejakhian.github.io/My-First-JS-Calculator/"><img src="images/projects/simple-calc.png" alt="projectImg"></a>
-                    <h2 id="project-title">Javascript Calculator</h2>
+                    <a href="https://ehiejakhian.github.io/Frontend-Mentor---Conference-ticket-generator/">
+                        <img src="https://res.cloudinary.com/dz209s6jk/image/upload/v1734612242/Challenges/c9o1buzwrz4kvvydxyv7.jpg" alt="projectImg">
+                    </a>
+                    <h2 id="project-title">Conference Ticket Generator</h2>
                     <div class="project-details">
                         <div class="dev">
-                            <a href="https://ehiejakhian.github.io/My-First-JS-Calculator/">View Site</a>
+                        <a href="https://github.com/Ehiejakhian/Frontend-Mentor---Conference-ticket-generator">View Code</a>
+                        <a href="https://ehiejakhian.github.io/Frontend-Mentor---Conference-ticket-generator/">View Site</a>
                         </div>
                         <div class="tools">
-                            <span class="html-tag">html</span>
-                            <span class="css-tag">css</span>
-                            <span class="js-tag">js</span>
+                        <span class="html-tag">html</span><span class="scss-tag">scss</span><span class="js-tag">javascript</span>
                         </div>
                     </div>
                 </div>
                 <div class="each-whole">
-                    <a href="https://ehiejakhian.github.io/Age-calculator-app/"><img src="images/projects/age-calculator.png" alt="projectImg"></a>
-                    <h2 id="project-title">Age Calculator</h2>
+                    <a href="https://ehiejakhian.github.io/Bento-grid/">
+                        <img src="https://res.cloudinary.com/dz209s6jk/image/upload/v1726215288/Challenges/sxzfwoarhrwt3gnz4qyg.jpg" alt="projectImg">
+                    </a>
+                    <h2 id="project-title">Bento Grid</h2>
                     <div class="project-details">
                         <div class="dev">
-                            <a href="https://github.com/Ehiejakhian/Age-calculator-app">View Code</a>
-                            <a href="https://ehiejakhian.github.io/Age-calculator-app/">View Site</a>
+                        <a href="https://github.com/Ehiejakhian/Bento-grid">View Code</a>
+                        <a href="https://ehiejakhian.github.io/Bento-grid/">View Site</a>
                         </div>
                         <div class="tools">
-                            <span class="html-tag">html</span>
-                            <span class="scss-tag">scss</span>
-                            <span class="js-tag">js</span>
+                        <span class="html-tag">html</span><span class="scss-tag">scss</span>
                         </div>
                     </div>
                 </div>
@@ -242,18 +243,19 @@
                     </div>
                 </div>
                 <div class="each-whole">
-                    <a href="https://ehiejakhian.github.io/Huddle-landing-page-with-a-single-introductory-section/"><img src="images/projects/Huddle-landing-page.png" alt="projectImg"></a>
-                    <h2 id="project-title">Huddle landing page</h2>
+                    <a href="https://ehiejakhian.github.io/Frontend-Mentor-Loopstudios-landing-page/">
+                        <img src="https://res.cloudinary.com/dz209s6jk/image/upload/f_auto,q_auto,w_700/Challenges/kfaa5whc9ukiqp3tqseo.jpg" alt="projectImg">
+                    </a>
+                    <h2 id="project-title">Loop Studios landing page</h2>
                     <div class="project-details">
                         <div class="dev">
-                            <a href="https://github.com/Ehiejakhian/Huddle-landing-page-with-a-single-introductory-section">View Code</a>
-                            <a href="https://ehiejakhian.github.io/Huddle-landing-page-with-a-single-introductory-section/">View Site</a>
+                        <a href="https://github.com/Ehiejakhian/Frontend-Mentor-Loopstudios-landing-page">View Code</a>
+                        <a href="https://ehiejakhian.github.io/Frontend-Mentor-Loopstudios-landing-page/">View Site</a>
                         </div>
                         <div class="tools">
-                            <span class="html-tag">html</span>
-                            <span class="scss-tag">scss</span>
+                        <span class="html-tag">html</span><span class="scss-tag">scss</span><span class="js-tag">javascript</span>
                         </div>
-                    </div>
+                </div>
                 </div>
 
                 
