Added faq section, modified testimonials and nothing much

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         name="description" 
         content="Hey there! I'm Ehi Ejakhian — a curious Front-end Developer and Arduino tinkerer. This is my corner of the web where I share what I build, what I learn, and what lights me up. Feel free to explore and say hi!"
     />
-    <meta name="keywords" content="ehiejakhian, Ehi, Ejakhian, Front-end, web development, Web developer, html, scss, javascript, Ehi Ejakhian, ehi">
+    <meta name="keywords" content="Ehi, ehiejakhian, Ejakhian, Front-end, web development, Web developer, html, scss, javascript, Ehi Ejakhian, ehi">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Language" content="en">
     <meta name="theme-color" content="#000000">
@@ -120,8 +120,13 @@
 
 
     <div id="whole-content">
-        <section id="profile">
-            <img src="images/myPictures/IMG_20250712_115430_332~4.jpg" id="profileImg" alt="profileImg">
+        <section id="profile" class="profile">
+            <figure>
+                <svg width="566" height="465" viewBox="0 0 555 465" fill="#000a0e" xmlns="http://www.w3.org/2000/svg" class="css-1yp5dg1">
+                <g clip-path="url(#clip0_9248_36714)"><path d="M219.118 125.676L163.127 0.0706116C49.9173 50.5365 -15.5504 170.491 3.25344 293.005C22.0573 415.519 120.486 510.319 243.619 524.51C366.753 538.701 484.165 468.776 530.345 353.752L402.727 302.516C379.637 360.029 320.931 394.991 259.364 387.895C197.797 380.8 148.583 333.4 139.181 272.143C129.779 210.886 162.513 150.908 219.118 125.676Z" fill="var(--cds-color-emphasis-primary-background-weak)"></path><g opacity="0.4"><path d="M183.678 293.858C196.284 327.391 225.757 351.701 261.075 357.698L244.218 456.971C173.581 444.977 114.635 396.357 89.4228 329.292L183.678 293.858ZM90.7143 329.875C115.878 395.812 173.88 443.654 243.4 455.814L259.922 358.508C225.019 352.228 195.904 328.214 183.1 295.143L90.7143 329.875Z" fill="var(--cds-color-emphasis-neutral-background-default)"></path></g><g opacity="0.1"><path d="M302.676 148.687L325.99 49.2171C255.014 31.9354 180.568 53.5584 130.492 106.001C80.4149 158.443 62.2485 233.806 82.7855 303.91L181.074 276.033C170.806 240.981 179.889 203.3 204.927 177.078C229.965 150.857 267.188 140.046 302.676 148.687Z" fill="var(--cds-color-emphasis-neutral-background-default)"></path></g></g><defs><clipPath id="clip0_9248_36714"><rect width="555" height="465" fill="white"></rect></clipPath></defs>
+                </svg>
+                <img src="images/myPictures/IMG_20250712_115430_332~4.jpg" id="profileImg" alt="profileImg">
+            </figure>
             <div id="profileText">
                 <div>
                     <h2 id="greeting-el"></h2>
@@ -316,7 +321,7 @@
                         </div>
                     </div>
                     <p>
-                        Ehi is a really creative person. His deep passion for research to create simple but responsive and interactive webpages give all viewers the feel of life on the page.He gives life to all his webpages and that was aquired by his hard work.
+                        Ehi works hard. His deep passion for research helped us acheieve great results on our group project.
                     </p>
                 </div>
                 <div class="review">
@@ -330,7 +335,7 @@
                         </div>
                     </div>
                     <p>
-                        He's commited to the job and works hard to meet deadlines, He's honest and dedicated.
+                        He's honest and knows what he's doing. I like that about him.
                     </p>
                 </div>
                 <div class="review">
@@ -339,12 +344,12 @@
                         <div id="job">
                             <h3>Euodia Esele</h3>
                             <span>
-                                Sketch Artist
+                                High Schooler
                             </span>
                         </div>
                     </div>
                     <p>
-                        Ehi pays mind to details, he creates well detaled pages and he is commited to learning. 
+                        Ehi pays mind to details, he creates decent and he is commited to learning. I am proud of him.
                     </p>
                 </div><!--
                 <div class="review no4">
@@ -391,6 +396,31 @@
                     </p>
                 </div>-->
                 <p></p>
+            </div>
+        </section>
+
+        <section id="faq" class="faq">
+            <h1>How...</h1>
+            <div class="faq__questions">
+                <details>
+                    <summary>Did you rate yourself?</summary>
+                    <p>
+                        For some of my skills, I used the progress value I had on the site I learn from. <a href="www.w3schools.org">W3schools</a> for example has a progress tracking system and I used that in some of the values. For the others, I just assumed.
+                    </p>
+                </details>
+                <details>
+                    <summary>Did you start coding?</summary>
+                    <p>
+                        While attending classes for my National diploma in computer engineering, I was introduced a bit to HTML. I just got home, searched the stuff up on youtube and here I am. I was also inctroduced to Visual Basic using the .NET framework, and to C++ for writing Arduino code.
+                    </p>
+                </details>
+                <details>
+                    <summary>About your hobbies?</summary>
+                    <p>
+                        I love sketching, drawing comics and animation. I draw a lot or at least, I used to. I love to sing too. I love reading about discoveries and new science concepts. I can say Coding is a hobby of mine too. I also love watching movies (maybe too much).
+                        <br>Over all, I love telling others about God's purpose of a wonderful earth free from sufferning and pain. The bible may be old, but as one of Jehovah's witnesses, I believe it's a manual for life. See more about this gist at <a href="www.jw.org">JW.org</a>
+                    </p>
+                </details>
             </div>
         </section>
 
